# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json
.claude/: settings.json
.claude/skills/cerebras/: SKILL.md
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  documents.py  llm.py  main.py  schemas.py  store.py
backend/tests/: test_api.py  test_auth.py  test_chat.py  test_db.py  test_documents.py  test_llm.py  test_saved_documents.py
frontend/: .eslintrc.json  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/components/: AuthLayout.tsx  DocChat.tsx  DocWorkspace.tsx  DocumentLibrary.tsx  DocumentPreview.tsx  LoginScreen.tsx  NdaChat.tsx  NdaDocument.tsx  NdaForm.tsx  NdaWorkspace.tsx  PlatformShell.tsx  SignupScreen.tsx
frontend/e2e/: auth.spec.ts  document.spec.ts  library.spec.ts  nda.spec.ts
frontend/lib/: auth.test.ts  auth.ts  chat.test.ts  chat.ts  documents.ts  library.test.ts  library.ts  nda.test.ts  nda.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
